# erl-tdlib

./: .gitignore  Cargo.toml  README.md  rebar.config
crates/tdlib-nif/: Cargo.toml
crates/tdlib-nif/src/: lib.rs
doc/: README.md  edoc-info  index.html  modules-frame.html  overview-summary.html  tdlib.html  tdlib.md  tdlib_nif.html  tdlib_nif.md
src/: tdlib.app.src  tdlib.erl  tdlib_nif.erl
