[package]
name = "tdlib-nif"
version = "0.1.1"
authors = ["Alexander Q <qalexx@gmail.com>"]

[lib]
name = "tdlib_nif"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.21.1"
rustler_codegen = "0.21.1"
lazy_static = "1.4.0"
rust-tdlib = { git = "https://github.com/lattenwald/rust-tdlib.git" }
